force-app/main/default/objects/KimbleOne__FlexiblePreference__c/KimbleOne__FlexiblePreference__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Flexible Preference</label>
</CustomObject>