force-app/main/default/objects/KimbleOne__FlexiblePreference__c/fields/KimbleOne__Preference01__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Preference01__c</fullName>
    <label>Delivery Engagement Scope View Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>