force-app/main/default/objects/KimbleOne__FlexiblePreference__c/fields/KimbleOne__Preference02__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Preference02__c</fullName>
    <label>Forecast Accuracy Dashboard Cards</label>
    <length>50</length>
    <type>Text</type>
</CustomField>