force-app/main/default/objects/KimbleOne__FlexiblePreference__c/fields/KimbleOne__Preference03__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Preference03__c</fullName>
    <label>Preference 03</label>
    <length>50</length>
    <type>Text</type>
</CustomField>